# MinecraftConsoles-IPConnect

./: CMakeLists.txt  README.md  server.txt
.github/workflows/: compile.yml  nightly.yml
Minecraft.Client/: AbstractContainerScreen.cpp  ChatScreen.cpp  ChestRenderer.h  Chunk.cpp  ClientConnection.cpp  ClockTexture.cpp  CompassTexture.cpp  DragonModel.cpp  EntityRenderDispatcher.cpp  Extrax64Stubs.cpp  FileTexturePack.cpp  FolderTexturePack.cpp  FrustumData.cpp  GameRenderer.cpp  Gui.cpp  JoinMultiplayerScreen.cpp  LevelRenderer.cpp  Minecraft.cpp  Minecraft.h  MinecraftServer.cpp  MobRenderer.cpp  ModelPart.h  MultiPlayerChunkCache.cpp  PaintingRenderer.cpp  PendingConnection.cpp  PlayerChunkMap.cpp  PlayerList.cpp  PlayerRenderer.cpp  ServerChunkCache.cpp  ServerConnection.cpp  ServerLevelListener.cpp  StitchedTexture.cpp  Tesselator.cpp  Tesselator.h  Texture.cpp  TextureManager.cpp  Textures.cpp  TileRenderer.cpp  Timer.h  glWrapper.cpp  (+2 more)
Minecraft.Client/Common/: Consoles_App.cpp  Consoles_App.h  PostProcesser.h
Minecraft.Client/Common/Audio/: Consoles_SoundEngine.h  SoundEngine.cpp  SoundEngine.h
Minecraft.Client/Common/Filesystem/: Filesystem.cpp
Minecraft.Client/Common/GameRules/: ConsoleSchematicFile.cpp
Minecraft.Client/Common/Network/: GameNetworkManager.cpp  PlatformNetworkManagerStub.cpp
Minecraft.Client/Common/Tutorial/: InfoTask.cpp
Minecraft.Client/Common/UI/: IUIScene_AbstractContainerMenu.cpp  UIScene_CraftingMenu.cpp  UIScene_Credits.h  UIScene_FireworksMenu.cpp  UIScene_FireworksMenu.h  UIScene_Intro.cpp  UIScene_Intro.h  UIScene_LoadOrJoinMenu.cpp  UIScene_LoadOrJoinMenu.h  UIScene_MainMenu.cpp  UIScene_SaveMessage.cpp  UIScene_SaveMessage.h
Minecraft.Client/Common/XUI/: XUI_Death.cpp  XUI_DebugOverlay.cpp  XUI_PauseMenu.cpp  XUI_Scene_Base.cpp  XUI_Scene_Inventory_Creative.cpp
Minecraft.Client/Durango/: Durango_Minecraft.cpp
Minecraft.Client/Durango/XML/: ATGXmlParser.cpp
Minecraft.Client/Linux64/: KeyboardMouseInput.cpp  KeyboardMouseInput.h  Linux64_App.cpp  Linux64_App.h  Linux64_Minecraft.cpp  Linux64_UIController.cpp  Linux64_UIController.h  Linux64_UIStubs.cpp  LinuxTypes.h  SessionLog.cpp  SessionLog.h
Minecraft.Client/Linux64/4JLibs/: 4J_Stubs.cpp  gl_api.cpp  gl_api.h  vk_backend.cpp  vk_backend.h  vk_pipeline.cpp  vk_pipeline.h  vk_texture.cpp  vk_texture.h
Minecraft.Client/Linux64/4JLibs/inc/: 4J_Input.h  4J_Profile.h  4J_Render.h
Minecraft.Client/Linux64/4JLibs/shaders/: minecraft.frag  minecraft.frag.spv  minecraft.vert  minecraft.vert.spv  shader_frag.h  shader_vert.h
Minecraft.Client/Linux64/GameConfig/: Minecraft.spa.h
Minecraft.Client/Linux64/Iggy/gdraw/: gdraw_d3d11.h
Minecraft.Client/Linux64/Iggy/include/: iggy.h
Minecraft.Client/Linux64/Network/: PosixNetLayer.cpp  PosixNetLayer.h
Minecraft.Client/Linux64/Sentient/: DynamicConfigurations.cpp  DynamicConfigurations.h  MinecraftTelemetry.h  SentientManager.cpp  SentientManager.h  SentientStats.h  SentientTelemetryCommon.h  TelemetryEnum.h
Minecraft.Client/Linux64/Social/: SocialManager.cpp  SocialManager.h
Minecraft.Client/Linux64/XML/: ATGXmlParser.h
Minecraft.Client/Orbis/: Orbis_Minecraft.cpp
Minecraft.Client/Orbis/OrbisExtras/: OrbisTypes.h
Minecraft.Client/PS3/PS3Extras/: Ps3Types.h
Minecraft.Client/PS3/SPU_Tasks/ChunkUpdate/: Tesselator_SPU.h  TileRenderer_SPU.cpp  Tile_SPU.cpp
Minecraft.Client/PSVita/: PSVita_Minecraft.cpp
Minecraft.Client/PSVita/Iggy/include/: iggy.h
Minecraft.Client/PSVita/PSVitaExtras/: PSVitaTypes.h
Minecraft.Client/Windows64/: Windows64_Minecraft.cpp  Windows64_Xuid.h
Minecraft.Client/Windows64/Network/: WinsockNetLayer.cpp
Minecraft.Client/Xbox/Sentient/: SentientManager.cpp
Minecraft.Client/Xbox/XML/: ATGXmlParser.cpp
Minecraft.World/: AABB.cpp  Biome.cpp  BiomeSource.cpp  BufferedOutputStream.cpp  Connection.cpp  Connection.h  ConsoleSaveFileOriginal.cpp  Dimension.cpp  DirectoryLevelStorage.cpp  Entity.cpp  FileHeader.h  FireworksRecipe.cpp  FlatLevelSource.h  Ghast.cpp  HalfSlabTile.cpp  Hasher.cpp  Icon.h  ItemInstance.cpp  LevelChunk.cpp  LivingEntity.cpp  MapItem.cpp  MapItemSavedData.cpp  MobEffectInstance.cpp  Monster.cpp  NbtIo.cpp  NetherBridgePieces.cpp  Packet.cpp  Pig.cpp  PreLoginPacket.cpp  Recipes.cpp  RemoveEntitiesPacket.cpp  RunAroundLikeCrazyGoal.cpp  Socket.cpp  StoneSlabTileItem.cpp  StringHelpers.cpp  Tag.cpp  Tag.h  TheEndLevelRandomLevelSource.cpp  TntTile.cpp  Wolf.cpp  (+3 more)
cmake/: ClientSources.cmake
